search icon to right

--- a/my.css
+++ b/my.css
@@ -10,3 +10,6 @@
     border: 0!important;
     margin-top: 6px!important;
 }
+.search-widget form button[type=submit]{
+    right:50px!important;
+}
