--- a/my.css
+++ b/my.css
@@ -13,3 +13,7 @@
 .search-widget form button[type=submit]{
     right:-10px!important;
 }
+
+.search-widget form {
+    margin-left: -30px!important;
+}
