--- a/my.css
+++ b/my.css
@@ -1,11 +1,3 @@
-#_desktop_logo {
-    width: 70%;
-    /*height: 10em;*/
-    /*position: relative*/
-}
-
-/*vertical-align: middle;*/
-/*margin: 0 auto;*/
 
 #search_widget {
     float: right;
@@ -31,9 +23,16 @@
 }
 
 #_desktop_logo{
+    width: 70%;
     margin: 0;
-    position: absolute;
-    top: 50%;
+    top: 110%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
+
+div.col-md-10.col-sm-12.position-static{
+    margin: 0;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
