--- a/my.css
+++ b/my.css
@@ -31,7 +31,7 @@
 /*TOP MENU*/
 #_desktop_top_menu {
     margin: 0;
-    position: absolute;
+    position: absolute!important;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, 0%)
