--- a/my.css
+++ b/my.css
@@ -1,5 +1,3 @@
-
-
 #wrapper{
     background-color: white!important;
 }
@@ -28,12 +26,12 @@
     /*position: relative*/
 /*}*/
 
-#_desktop_logo {
-    width: 70%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, 0%);
-}
+/*#_desktop_logo {*/
+    /*width: 70%;*/
+    /*left: 50%;*/
+    /*margin-right: -50%;*/
+    /*transform: translate(-50%, 0%);*/
+/*}*/
 
 
 /*TOP MENU*/
