styled logo top

--- a/my.css
+++ b/my.css
@@ -2,7 +2,11 @@
     background-color: white!important;
 }
 
-
+#logo_top_row{
+    margin-top: 15px;
+    margin-bottom: 0;
+    zoom: 90%;
+}
 
 /*#search_widget {*/
     /*float: right;*/
